src/App.css
/*
 
Colors
#37284e - Darkest Purple
#3c1660 - Medium Purple
#6b5acd - Light Purple
#ce38ff - Hot Pink
#c199e5 - Light Pink
#2ff6e6 - Teal
#06edfd - Cyan

*/
.purp1, 
.purp2, 
.purp3 {
  fill:#6b56d0;
}
.teal1, 
.teal2, 
.teal3 {
  fill:#2FF6E6;
}

.intro-outer{
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  
}



.intro-outer svg {

  width: 300px;
}

.main {
  position: relative;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  width: 100vw;
  height: 100%;
  min-height: 100vh;
}


.logo {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  margin-top: 2em;
  width: 100vw;
  height: 100vh;
  
}

.logo img {
  width: 250px;
  transition: all 400ms ease-in-out;
}

.lab-outer {
  width: 100vw;
  height: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}
.lab-animation {
  width: 65vw;
  padding-bottom: 40px;
}

.menu a {
  text-decoration: none;
  color: #37284e;
  margin: 1em;
  margin-top: 2em;
}

/* Position and sizing of burger button */
.bm-burger-button {
  position: fixed;
  width: 36px;
  height: 30px;
  right: 50px;
  top: 50px;
}

/* Color/shape of burger icon bars */
.bm-burger-bars {
  background: #2FF6E6;
}

/* Position and sizing of clickable cross button */
.bm-cross-button {
  height: 24px;
  width: 24px;
}

/* Color/shape of close button cross */
.bm-cross {
  background: #37284e;
}

/* General sidebar styles */
.bm-menu {
  background: #2FF6E6;
  padding: 2.5em 1.5em 0;
  font-size: 1.15em;
}

/* Morph shape necessary with bubble or elastic */
.bm-morph-shape {
  fill: #373a47;
}

/* Wrapper for item list */
.bm-item-list {
  color: #b8b7ad;
  padding: 0.8em;
}

/* Styling of overlay */
.bm-overlay {
  height: 100vh;
  background: rgba(0, 0, 0, 1);
}

/* .nav {
  position: fixed;
  right: 0;
  width: 10em;
  height: 10em;
  
  margin-top : 2.5em;
}

.nav li {
  cursor: pointer;
  top: 0;
  padding: 10px;
  list-style-type: none;
  
}

.nav a {
  text-decoration: none;
  color: white;
} */

.mission {
  display: flex;
  flex-direction: row;
  align-items: center;
  position: relative;
  box-sizing: border-box;
  margin: 0;
  padding-top: 100px;
  padding-bottom: 100px;
  padding-right: 100px;
  width: 100vw;
  height: 100%;
}





.astronaut-animation svg{
  margin: 0;
  padding: 0;
  vertical-align: bottom;
  width: 100vw;
  height: 100%;
}

.research-top-animation svg {
  margin: 0;
  margin-top: -1px;
  padding: 0;
  width: 100vw;
  height: 100%;
  background: #6b56d0;
  vertical-align: bottom;
}

.research-bottom-animation {
  width: 100vw;
}

.research-bottom-animation svg {
  margin: 0;
  padding: 0;
  width: 100vw;
  height: 100%;
}

.mission div {
  display: flex;
  flex-direction: column;
  width: 100vw;
  text-align: left;
  margin: 50px;
  width: 50vw;
  

}

.mission div svg {
  margin: 0 auto;
  max-width: 80%;
}



.mission p, .mission h1 { 

  margin: 0;
  padding: 15px;
  
}

.mission p {
  padding-bottom: 100px;
}

.research {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  margin: 0;
  width: 100vw;
  height: 100%;
  background: #6b56d0;
  z-index: 2;
}

.research {
  padding-top: 150px;
}

.research div:last-child {
  padding-bottom: 100px;
}

.research-inner {
  width: 100vw;
  text-align: left;
  width: 50vw; 
}

.research-plasma {
  width: 100vw;
  text-align: left;
  width: 50vw;
}

.research p, .research h1, .research h4 {
  margin: 1.3em;
}

.research h1 {
  margin: 0;
  padding-left: 0.6em;
}

.research p {
  margin-bottom: 60px;
}

.pdf-outer {
  display: flex;
  flex-wrap: wrap;
  width: 50vw;
}

.pdf-left {
  flex: 1;
  min-width: 250px;
  text-align: center;
}

.pdf-right {
  flex: 1;
  min-width: 250px;
  text-align: center;
}

.tools-outer {
  display: flex;
  align-items: center;
  justify-content: center;
}

.tools-animation {
  height: 90vh;
}


.works {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  margin: 0;
  padding-left: 100px;
  padding-right: 100px;
  min-height: 100%;
  
}

.works-content {
  align-self: center;
  margin-top: 60px;
  margin-bottom: 60px;
}

.works-content:first-child {
  padding-top: 100px;
}

.works-content:last-child {
  padding-bottom: 100px;
}

.works-content h1,.works-content h2, .works-content h4 {
  width: 50vw;
  text-align: left;
  padding-left: 50px;
}

.works-content h4{
  color: #c19de5;
}

.works-content p {
  text-align: left;
  margin: 0;
  padding-left: 50px;
  width: 50vw;
}

.works-content a {
  text-decoration: none;
}

.works-content:first-child img{
  padding-left: 10px;
}

.games-container {
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: stretch;
  align-content: stretch;
  margin-left: 50px;
  margin-right: 50px;
}

.games-inner {
  margin-left: -50px;
}

.space-robot div svg {
  padding-left: 2em;
  height: 100%;
}

.team-outer {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  text-align: center;
  width: 100vw;
  height: 100%;
  background: #6b56d0;
  z-index: 2;
  padding-top: 100px;
  padding-bottom: 100px;
}

.team-outer h1 {

  padding-top: 30px;
  font-size: 2em;
}

.team-outer h2 {
  padding-top: 20px;
  font-size: 2em;
}

.team {
  display: flex;
  justify-content: space-around;
  box-sizing: border-box;
  margin-top: 30px;
  padding: 0;
  width: 100vw;

}

.team-2 {
  display: flex;
  justify-content: space-around;
  box-sizing: border-box;
  margin-top: 50px;
  margin-bottom: 50px;
  padding: 0;
  width: 100vw;
}



.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 200px;
  height: 200px;
}

.card img {
  margin-bottom: 20px;
}

.card p:nth-child(2) {
  margin: 0;
  padding: 0;
  line-height: 1em;
}

.card p:nth-child(3) {
  margin-top: 0px;
  padding: 0;
  line-height: 24px;
}

.clip {
  -webkit-clip-path: circle(75px);
  clip-path: circle(75px);  
}


.partners {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 100vw;
  margin: 0;
  padding: 0;
}

.partners-outer {
  text-align: center;
  z-index: 5;
}

.partners-outer h1{
  padding: 30px;
}

.join-outer {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  width: 100vw;
  padding-top: 40px;
  padding-bottom: 100px;

}

.join {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  width: 60vw;
  height: 30vh;
  
}


/* Media Queries */

@media only screen and (max-width: 768px){


  .tools-animation {
    display: none;
  }



  .logo {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100vw;
    height: 100vh;
    margin: 0;
    padding-left: 0px;
  }
  
  .logo img{
  
    width: 150px;
  }

  .lab {
    width: 100vw;
    height: auto;
  }

  .lab-animation {
    width: 80vw;
    padding-bottom: 20px;
  }
  
  
  .mission {
    position: relative;
    height: 100%;
    width: 100vw;
    margin: 0;
    padding: 0;
  }
  
  .mission {
    flex-direction: column-reverse;
  }
  
  
  .mission p, .mission h1 {
    text-align: left;
    width: 87vw;
    margin:0;
    margin-right: 0;
  }
  
  .mission div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0;
    width: 100vw;
  }
  
  .mission div svg {
    max-width: 50%;
  }


  .research {
    position: relative;
    height: 100%;
    width: 100vw;
    margin: 0;
    padding-top: 50px;
  }  

  .research div{
    width: 90vw;
    margin: 0;
  }

  .research h1 {
    margin: 0;
    padding-left: 20px;
  }

  .pdf-left {
    flex: 1;
    min-width: 250px;
    text-align: center;
    padding-bottom: 40px;
  }
  
  .pdf-right {
    flex: 1;
    min-width: 250px;
    text-align: center;
  }


  .works {
    align-items: center;
    margin: 0;
    padding: 0;
  }

  .works-content {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: left;
    justify-content: left;
    left: 0px;
    padding: 0px;
  }


  .works-content h1,.works-content h2, .works-content h4 {
    width: 50vw;
    text-align: left;
    padding-left: 15px;
  }

  .works-content p {
    width: 90vw;
    height: 100%;
    padding-left: 15px
    
  }

  .works-content:first-child {
    padding-top: 0px;
  }

  .works-content:last-child {
    padding-bottom: 0px;
  }

  .games-inner {
    margin-left: 0px;
    flex: 0 1 1 auto;
  }

  .space-robot {
    display: none;
  }



  .team-outer h1 {
    padding: 0;
    margin-top: 50px;
  }

  .team {
    text-align: left;
    display: flex;
    align-items: flex-end;
    justify-content: space-around;
    margin-top: 40px;
    margin-left: 0;
  }

  .team div {
    transition: all 300ms ease-in-out;
    height: 50px;
    width: 50px;
  }

  .team-2 {
    text-align: left;
    margin-top: 200px;
  }

  .clip {
  -webkit-clip-path: circle(40px);
  clip-path: circle(40px);  
  }

  .card img {

    flex-wrap: wrap;
    padding-top: 0;
    margin-top: 0;
    width: 100px;
  }

  .card p {
    text-align: center;

  }

  .join-outer {
    height: 100%;
  }


  .partners {
    flex-wrap: wrap;
  }


}

@media only screen and (max-width: 450px) {
  .mission{
    display: flex;
    align-items: center;
    margin: 0;
    padding: 0;
  }



  .research h1 {
    margin: 0;
    padding-left: 20px;
  }

  .works {
   
    align-items: center;
  }

  .partners {
    display: flex;
    flex-wrap: wrap;
  }
  .partners a {
    width: 100vw;
    padding: 15px;
  }
}

@media only screen and (max-height: 630px) {
  .lab {
    display: none;
  }

  .logo {
    width: 100vw;
    height: 100vh;
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .works {
    margin: 0;
    padding: 0;
    overflow-y: scroll;
    overflow-x: hidden;
  }

  .team-outer {
    height: 100%;
  }

  .team-2 {
    padding-bottom: 30px;
  }
}

